--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+**/src/github.com/
+**/src/golang.org/
+**/bin/
+**/pkg/
